--- a/pom.xml
+++ b/pom.xml
@@ -34,7 +34,18 @@
 			<version>1.18.20</version>
 			<scope>provided</scope>
 		</dependency>
-		</dependencies>
+        <dependency>
+            <groupId>org.jetbrains</groupId>
+            <artifactId>annotations</artifactId>
+            <version>RELEASE</version>
+            <scope>compile</scope>
+        </dependency>
+		<dependency>
+			<groupId>javax.validation</groupId>
+			<artifactId>validation-api</artifactId>
+			<version>2.0.1.Final</version>
+		</dependency>
+    </dependencies>
 
 
 	<build>
